# ur_vla

./: .gitignore  README.md  compose.yaml  ur_vla.repos
.cursor/rules/: testing-loop.mdc
docker/: Dockerfile  entrypoint.sh
scripts/: demo_gripper.sh  move_to_ready.sh  run_tests_with_logs.sh  save_camera_images.py  save_camera_images.sh  save_wrist_image.py  save_wrist_image.sh
src/ur10_description/: CMakeLists.txt  package.xml
src/ur10_description/urdf/: ur10_gripper_gz.xacro  ur10_gz.urdf.xacro  ur10_ros2_control_gz.xacro  ur10_wrist_camera_gz.xacro
src/ur10_gz_bringup/: CMakeLists.txt  package.xml
src/ur10_gz_bringup/config/: controllers.yaml
src/ur10_gz_bringup/launch/: ur10_gz_bringup.launch.py
src/ur10_gz_bringup/test/: test_ur10_gz_bringup.py
src/ur10_gz_bringup/worlds/: simple_ground_light.sdf
