<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_description</name>
  <version>0.1.0</version>
  <description>UR10 robot description with gz_ros2_control for Gazebo Harmonic</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>ros2_control</depend>
  <depend>gz_ros2_control</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
