<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_gz_bringup</name>
  <version>0.1.0</version>
  <description>Launch and config for UR10 in Gazebo Harmonic with gz_ros2_control</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>xacro</depend>
  <depend>ur10_description</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>control_msgs</test_depend>
  <test_depend>trajectory_msgs</test_depend>
  <test_depend>builtin_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
